change method from onclick to eventListener

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
                     <h2 id="home-score">0</h2>
                 </div>
                 <div class="score-btns">
-                    <button id="addone" onclick="addOneHome()">+1</button>
-                    <button id="addtwo" onclick="addTwoHome()">+2</button>
-                    <button id="addthree" onclick="addThreeHome()">+3</button>
+                    <button id="home-add-one">+1</button>
+                    <button id="home-add-two">+2</button>
+                    <button id="home-add-three">+3</button>
                 </div>
             </div>
             <div class="score-container">
@@ -23,9 +23,9 @@
                     <h2 id="guest-score">0</h2>
                 </div>
                 <div class="score-btns">
-                    <button id="addone" onclick="addOneGuest()">+1</button>
-                    <button id="addtwo" onclick="addTwoGuest()">+2</button>
-                    <button id="addthree" onclick="addThreeGuest()">+3</button>
+                    <button id="guest-add-one">+1</button>
+                    <button id="guest-add-two">+2</button>
+                    <button id="guest-add-three">+3</button>
                 </div>
             </div>
         </div>
